samples/_failures_safe/1761616156_1e76ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1cf9f17.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a1cf9f17.c:168:13: error: expected expression at end of input
  168 |             column += (pos -
      |             ^~~~~~
./samples/SAFE/__tmp_a1cf9f17.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1cf9f17.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1cf9f17.c:168:13: error: expected declaration or statement at end of input
